Updated secondary-alt in snow + default theme

--- a/scss/utilities/_theme.scss
+++ b/scss/utilities/_theme.scss
@@ -13,7 +13,7 @@ body {
     --theme-text-negitive: #fa4e4e;
     --theme-bg-primary: #ffffff;
     --theme-bg-secondary: var(--al-super-light-gray);
-    --theme-bg-secondary-alt: #dde4e9;
+    --theme-bg-secondary-alt: #e8e8e8;
     --theme-bg-tertiary: var(--al-light-gray);
     --theme-bg-floating: #ffffff;
     --theme-bg-accent: var(--al-light-black);
@@ -58,7 +58,7 @@ body {
     --theme-text-negitive: #fa4e4e;
     --theme-bg-primary: #ffffff;
     --theme-bg-secondary: var(--al-super-light-gray);
-    --theme-bg-secondary-alt: #dde4e9;
+    --theme-bg-secondary-alt: #e8e8e8;
     --theme-bg-tertiary: var(--al-light-gray);
     --theme-bg-floating: #ffffff;
     --theme-bg-accent: var(--al-light-black);
